# django-form-control

./: AUTHORS  pyproject.toml  setup.cfg
.github/workflows/: django-form-control-ci.yml
docs/source/: settings.py
form_control/: __init__.py  admin.py  apps.py  constants.py  forms.py
